--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
 </head>
 
 <body class="overflow-x-hidden">
+  <a id="contact-whatsapp"
+    href="https://wa.me/5491134577190?text=%C2%A1Hola!%20Quisiera%20informaci%C3%B3n%20respecto%20a%20sus%20productos">
+    <img src="img/icons/whatsapp-f.svg" alt="Contactanos por Whatsapp">
+  </a>
   <div id="topbar" class="absolute top-0 bg-gray-200 w-full z-10">
     <ul class="flex items-center justify-end px-5 py-1">
       <li>
-        <a href="https://farmacoop.org" target="_blank" class="flex items-center text-xs">
+        <a href="https://farmacov.com" target="_blank" class="flex items-center text-xs">
           <img src="img/farmacoop-iso.svg" alt="Farmacoop" class="w-6 h-6 mr-1 filter-grayscale">
           FarmaCov Test
         </a>
@@ -68,7 +72,8 @@
         class="text-lg font-medium flex items-center lg:pb-12 pointer-events-none lg:pointer-events-auto fixed lg:relative h-screen lg:h-auto w-screen lg:w-auto opacity-0 lg:opacity-100 lg:block left-0 top-0">
         <img id="close-menu" src="img/icons/close.svg" alt="Cerrar menu" class="w-10 lg:hidden absolute">
         <a href="#intro" class="mr-20">Sobre nosotros</a>
-        <a href="#products" class="mr-20">Nuestros productos</a>
+        <a href="#products" class="mr-20">Productos</a>
+        <a href="#services" class="mr-20">Servicios</a>
         <a href="#contact" class="mr-20">Contacto</a>
       </nav>
     </div>
@@ -82,7 +87,8 @@
             país</div>
           <div class="text-xl md:text-2xl lg:text-base leading-relaxed text-white">
             Somos un laboratorio farmacéutico,
-            producimos productos médicos y cosméticos <span class="font-base text-white">combinando innovación y ética social</span>.
+            producimos productos médicos y cosméticos <span class="font-base text-white">combinando innovación y ética
+              social</span>.
           </div>
           <a class="btn white mt-8 font-medium" href="#intro">Sobre nosotros</a>
         </div>
@@ -93,7 +99,8 @@
     </section>
     <section id="intro" class="py-32">
       <div class="container lg:mx-auto max-w-medium px-5 lg:px-0">
-        <div class="title w-line">Farmacoop (ex Roux-Ocefa) es el primer laboratorio farmacéutico recuperado en el mundo
+        <div class="title w-line">Farmacoop (ex Roux-Ocefa) es el primer laboratorio farmacéutico recuperado en el
+          mundo
         </div>
         <div class="glide max-w-xl">
           <div class="glide__track" data-glide-el="track">
@@ -127,8 +134,11 @@
           </div>
         </div>
         <div class="my-10 max-w-2xl leading-loose text-lg lg:text-base">
-          Pusimos nuevamente en marcha un histórico laboratorio, apostando por el desarrollo nacional. Queremos volver a ser un laboratorio de
-          vanguardia en tecnología farmacéutica <span class="font-bold">,con responsabilidad y perspectiva social</span>.
+          Pusimos nuevamente en marcha un histórico laboratorio, apostando por el desarrollo nacional. Queremos volver
+          a
+          ser un laboratorio de
+          vanguardia en tecnología farmacéutica <span class="font-bold">,con responsabilidad y perspectiva
+            social</span>.
         </div>
         <a href="#" class="btn">
           Conocé nuestra historia
@@ -141,11 +151,19 @@
     <section id="hero" class="pt-10">
       <div class="container lg:mx-auto px-5 lg:px-0">
         <div class="title w-line">
-          Farmacoop se posiciona competitivamente en el mercado a partir de la producción de sanitizantes, insumos médicos y kits de test serológicos de anticuerpos de COVID-19, todos ellos certificados por ANMAT. A su vez buscamos posicionarnos como una referencia en innovación, tecnología de punta calidad en la industria farmacéutica.
+          Farmacoop se posiciona competitivamente en el mercado a partir de la producción de sanitizantes, insumos
+          médicos y kits de test serológicos de anticuerpos de COVID-19, todos ellos certificados por ANMAT. A su vez
+          buscamos posicionarnos como una referencia en innovación, tecnología de punta calidad en la industria
+          farmacéutica.
         </div>
       </div>
     </section>
     <section id="products" class="py-24 lg:py-10">
+      <div class="mt-16 lg:mt-32 mb-16 flex justify-center text-xl uppercase font-semibold">
+        <div class="border-b-4 border-main-dark-color">
+          Productos
+        </div>
+      </div>
       <div
         class="product h-product flex flex-col items-end md:grid md:grid-cols-products-reversed md:reversed md:gap-5 lg:block">
         <img src="img/farmacov.png" alt="Farmacov Test"
@@ -153,7 +171,7 @@
         <div class="container mx-auto flex justify-start px-5 lg:px-0">
           <div class="max-w-lg lg:pr-10 lg:mr-10 mt-12 lg:mt-24 leading-loose line-bottom">
             <div class="title">FarmaCov Test</div>
-            <div class="text-lg text-gray-700">FarmaCoV Test® es un test rápido serológico para detectar anticuerpos IgG
+            <div class="text-lg">FarmaCoV Test® es un test rápido serológico para detectar anticuerpos IgG
               resultantes
               de la exposición a SARS-CoV-2 de manera
               cualitativa, que posee un tiempo de respuesta
@@ -162,7 +180,7 @@
               del Instituto CINDEFI-CONICET de la Universidad Nacional de La Plata en vinculación con
               la empresa tecnológica Bamboo Biotech con
               tecnología de punta en biología molecular.
-              <div class="mt-3  text-gray-700">
+              <div class="mt-3 ">
                 Más información en <a href="https://farmacov.com" target="_blank"
                   class="font-bold text-main-color">farmacov.com</a>.
               </div>
@@ -172,53 +190,86 @@
         </div>
       </div>
       <div class="product h-product mt-24 lg:mt-12 md:grid md:grid-cols-products md:gap-5 lg:block">
-        <img src="img/Aqualane.png" alt="Alcohol en gel"
+        <img src="img/aqualane.png" alt="Alcohol en gel"
           class="w-64 h-auto lg:w-auto lg:absolute left-0 lg:object-contain lg:h-full">
         <div class="container lg:mx-auto flex justify-end px-5 lg:px-0">
           <div class="max-w-lg lg:pr-10 lg:mr-10 mt-12 lg:mt-24 leading-loose line-bottom">
             <div class="title">Aqualane</div>
-            <div class="text-lg text-gray-700"> Desde 1967 a hoy, de Roux Ocefa a Laboratorios Farmacoop, vuelve Aqualane con un nuevo diseño y con la misma fórmula de siempre.
-			Aqualane es un producto apto para todo tipo de pieles, testeada sin realizar pruebas en animales y usando sólo materias primas de origen vegano.
-			</div>
+            <div class="text-lg"> Desde 1967 a hoy, de Roux Ocefa a Laboratorios Farmacoop, vuelve
+              Aqualane con un nuevo diseño y con la misma fórmula de siempre.
+              Aqualane es un producto apto para todo tipo de pieles, testeada sin realizar pruebas en animales y
+              usando
+              sólo materias primas de origen vegano.
+            </div>
+            <a href="aqualane.html" class="btn mx-auto my-5">
+              Más información
+            </a>
           </div>
         </div>
       </div>
       <div
         class="product h-product mt-24 lg:mt-12 flex flex-col items-end md:grid md:grid-cols-products-reversed md:reversed md:gap-5 lg:block">
-        <img src="img/barbijo.png" alt="Barbijo"
+        <img src="img/operador.png" alt="Barbijo"
           class="w-64 h-auto lg:w-auto lg:absolute right-0 lg:object-contain lg:h-full">
         <div class="container mx-auto flex justify-start px-5 lg:px-0">
           <div class="max-w-lg lg:pr-10 lg:mr-10 mt-12 lg:mt-24 leading-loose line-bottom">
             <div class="title">Operador Logístico de Medicamentos</div>
-            <div class="text-lg text-gray-700">Estamos centralizando los procesos logísticos y de almacenaje a empresas que producen
-              productos médicos. Nuestro deposito cuenta con las habilitaciones regulatorias correspondiente, avaladas por ANMAT. Desde Farmacoop aportamos lo necesario para su acopio y distribución.</div>
+            <div class="text-lg">Estamos centralizando los procesos logísticos y de almacenaje a empresas
+              que producen
+              productos médicos. Nuestro deposito cuenta con las habilitaciones regulatorias correspondiente, avaladas
+              por ANMAT. Desde Farmacoop aportamos lo necesario para su acopio y distribución.</div>
           </div>
         </div>
       </div>
-	   <div class="product h-product mt-24 lg:mt-12 md:grid md:grid-cols-products md:gap-5 lg:block">
+      <div class="product h-product mt-24 lg:mt-12 md:grid md:grid-cols-products md:gap-5 lg:block">
         <img src="img/alcohol.png" alt="Alcohol en gel"
           class="w-64 h-auto lg:w-auto lg:absolute left-0 lg:object-contain lg:h-full">
         <div class="container lg:mx-auto flex justify-end px-5 lg:px-0">
           <div class="max-w-lg lg:pr-10 lg:mr-10 mt-12 lg:mt-24 leading-loose line-bottom">
             <div class="title">Alcoholes Sanitizantes</div>
-            <div class="text-lg text-gray-700"> A partir de nuestros reactores y llenadoras producimos más de 2000
+            <div class="text-lg"> A partir de nuestros reactores y llenadoras producimos más de 2000
               litros de alcohol en gel por día, en envases de 250 ml o bidones de 5 litros: un producto de calidad que
-              cumple todos los estándares sanitarios y que comercializamos a un precio competitivo sin especulación coyuntural. Con este producto fuimos una solucion a la escasez de este insume en el primer momento crítico de la pandemia.</div>
-          
-		  </div>
+              cumple todos los estándares sanitarios y que comercializamos a un precio competitivo sin especulación
+              coyuntural. Con este producto fuimos una solucion a la escasez de este insume en el primer momento
+              crítico
+              de la pandemia.</div>
+          </div>
         </div>
       </div>
-	  
-      <div class="flex justify-center mt-24 lg:mt-0">
-        <a href="#" class="btn mx-auto">
-          Conocé nuestros productos
-          <div class="text-base text-white opacity-50">
-            (próximamente)
+    </section>
+    <section id="services" class="pt-24 pb-10 lg:py-10">
+      <div class="container lg:mx-auto px-5 lg:px-0">
+        <div class="mt-8 lg:mt-32 mb-16 lg:mb-32 flex justify-center text-xl uppercase font-semibold">
+          <div class="border-b-4 border-main-dark-color">
+            Servicios
           </div>
-        </a>
+        </div>
+        <div class="mx-auto font-bold text-3xl lg:text-center">Somos operadores logísticos de medicamentos:</div>
+        <ul class="mx-auto list grid grid-cols-1 lg:grid-cols-2 col-gap-10 row-gap-4 max-w-5xl text-2xl mt-16">
+          <li>Habilitación ANMAT</li>
+          <li>Trazabilidad</li>
+          <li>Más de 1000 m² disponibles</li>
+          <li>Sistema online de gestión de stocks</li>
+          <li>Depósitos con temperatura controlada</li>
+          <li>Seguridad 24hs</li>
+          <li>Áreas segregadas</li>
+          <li>Playa de maniobras y estacionamiento para camiones</li>
+          <li>Preparación de pedidos</li>
+          <li>Personal capacitado y con experiencia</li>
+        </ul>
+        <div class="mx-auto max-w-5xl pt-10 lg:pt-24">
+          <div class="px-5 lg:px-0 grid grid-cols-1 md:grid-cols-2 gap-10 lg:gap-16">
+            <div class="block shadow-fc">
+              <img src="img/aqualane/services-1.jpg" alt="Depósito">
+            </div>
+            <div class="block shadow-fc">
+              <img src="img/aqualane/services-2.jpg" alt="Depósito">
+            </div>
+          </div>
+        </div>
       </div>
     </section>
-    <section class="lg:mt-32">
+    <section class="lg:mt-24">
       <div id='hero-2' class="bg-cover px-5 pt-56 pb-16 lg:pt-0 lg:pb-0 lg:bg-contain">
         <div class="container mx-auto flex justify-end">
           <div class="block md:max-w-lg lg:max-w-none">
@@ -241,7 +292,8 @@
           </div>
           <div class="block shadow-fc">
             <img src="img/comp-barbijos.jpg" alt="Compromiso con babijos">
-            <div class="text-xl p-6 leading-tight">Producir más de 5000 test semanales de anticuerpos de COVID-19.</div>
+            <div class="text-xl p-6 leading-tight">Producir más de 5000 test semanales de anticuerpos de COVID-19.
+            </div>
           </div>
           <div class="block shadow-fc md:col-span-2">
             <img src="img/comp-costo.jpg" alt="Compromiso bajo costo">
@@ -253,7 +305,6 @@
     </section>
     <section id="contact" class="py-32 lg:py-48">
       <div class="container mx-auto px-5 lg:px-24">
-        <div class="title w-line lg:pb-20">Proponemos cooperación para combatir la pandemia del virus COVID-19.</div>
         <div id="contact-list"
           class="grid grid-cols-1 gap-5 justify-between items-start md:grid-cols-2 lg:grid-cols-4 lg:gap-12">
           <div>
